@@ -130,7 +130,7 @@ void TradeHandler::handleMessage(MessageIn *msg)
                         chatWindow->chatLog("Trade with " + tradePartnerName +
                                             " cancelled", BY_SERVER);
                     // otherwise ignore silently
-                                    
+
                     tradeWindow->setVisible(false);
                     player_node->setTrading(false);
                     break;
@@ -187,6 +187,12 @@ void TradeHandler::handleMessage(MessageIn *msg)
                         // Add item failed - player overweighted
                         chatWindow->chatLog("Failed adding item. Trade "
                                 "partner is over weighted.",
+                                BY_SERVER);
+                        break;
+                    case 2:
+                        // Add item failed - player has no free slot
+                        chatWindow->chatLog("Failed adding item. Trade "
+                                "partner has no free slot.",
                                 BY_SERVER);
                         break;
                     default:
